# pwsafe

./: CMakeLists.txt  README.CMAKE.md
CMakeModules/: BundleUtilities.cmake  MacosxBundleInfo.plist.in  PwsafeResources.cmake
Misc/: CMakeLists.gtest.txt.in
help/: CMakeLists.txt
install/macosx/: template.applescript.in
src/core/: CMakeLists.txt
src/os/unix/: dir.cpp
src/ui/cli/: CMakeLists.txt
src/ui/wxWidgets/: CMakeLists.txt
src/ui/wxWidgets/I18N/: CMakeLists.txt
